--- a/src/assets/css/basic.scss
+++ b/src/assets/css/basic.scss
@@ -78,6 +78,13 @@
   //display: none;
 }
 
+.hidden-editor{
+  opacity: 0;
+  width: 0;
+  height: 0;
+
+}
+
 .blog-server-box {
   display: flex;
   flex-direction: column;
