--- a/src/assets/css/basic.scss
+++ b/src/assets/css/basic.scss
@@ -1,60 +1,70 @@
 @import "mixin.scss";
 .text-s1 {
-    color: #333333;
-    font-weight: bold;
-  }
-  .text-s2 {
-    color: #333333;
-    font-size: 15px;
-    line-height: 25px;
-  }
+  color: #333333;
+  font-weight: bold;
+}
+.text-s2 {
+  color: #333333;
+  font-size: 15px;
+  line-height: 25px;
+}
 
-  .text-s3 {
-    color: #333333;
-    font-size: 30px;
-    font-weight: bold;
-    transition: all 0.3s;
-    cursor: pointer;
-  }
+.text-s3 {
+  color: #333333;
+  font-size: 30px;
+  font-weight: bold;
+  transition: all 0.3s;
+  cursor: pointer;
+}
 
-  .text-s3:hover {
-    color: #ff6600;
-  }
-  .text-s4{
-    color: #333333;
-    font-size: 16px;
-    font-weight: bold;
-    transition: all 0.3s;
-    cursor: pointer;
-  }
-  .text-s4:hover{
-    color: #3683d6;
-  }
-  * {
-    padding: 0px;
-    margin: 0px;
-  }
-  .mr20 {
-    margin-right: 20px;
-  }
-  .mr30 {
-    margin-right: 30px;
-  }
-  .mr40 {
-    margin-right: 40px;
-  }
-  .mr50 {
-    margin-right: 50px;
-  }
-  .mr60 {
-    margin-right: 60px;
-  }
-  .mt20{
-    margin-top: 20px;
-  }
-  a {
-    text-decoration: none;
-  }
+.text-s3:hover {
+  color: #ff6600;
+}
+.text-s4{
+  color: #333333;
+  font-size: 16px;
+  font-weight: bold;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+.text-s4:hover{
+  color: #3683d6;
+}
+.readme-icon{
+  font-size: 180px;
+}
+.readme-title{
+  margin-top: 20px;
+  font-family:Arial;
+  font-size: 30px;
+  font-weight: bold;
+  color: #5D6D7E;
+}
+* {
+  padding: 0px;
+  margin: 0px;
+}
+.mr20 {
+  margin-right: 20px;
+}
+.mr30 {
+  margin-right: 30px;
+}
+.mr40 {
+  margin-right: 40px;
+}
+.mr50 {
+  margin-right: 50px;
+}
+.mr60 {
+  margin-right: 60px;
+}
+.mt20{
+  margin-top: 20px;
+}
+a {
+  text-decoration: none;
+}
 
 .time-s{
   background-color: #ff6600;
@@ -63,10 +73,10 @@
 
 .blog-text-p{
 
-    font-size: 18px;
-    font-weight: bold;
-    font-family: Arial;
-    line-height: 40px;
+  font-size: 18px;
+  font-weight: bold;
+  font-family: Arial;
+  line-height: 40px;
 
 }
 
@@ -84,9 +94,7 @@
 }
 .hidden-hint{
   opacity: 0;
-  //width: 0;
-  //height: 0;
-  transform: translateX(400px);
+  color: white;
 }
 .blog-server-box {
   display: flex;
