--- a/src/assets/css/basic.scss
+++ b/src/assets/css/basic.scss
@@ -47,6 +47,7 @@
 .mr20 {
   margin-right: 20px;
 }
+
 .mr30 {
   margin-right: 30px;
 }
@@ -59,6 +60,13 @@
 .mr60 {
   margin-right: 60px;
 }
+
+.ml20 {
+  margin-left: 20px;
+}
+
+
+
 .mt20{
   margin-top: 20px;
 }
