--- a/src/assets/css/mixin.scss
+++ b/src/assets/css/mixin.scss
@@ -7,6 +7,11 @@
   box-shadow: 1px 1px 12px #888888;
 }
 
+@mixin shadowMenuItem(){
+  box-shadow: 2px 2px 5px #888888;
+}
+
+
 @mixin shadowHover(){
   box-shadow: 1px 7px 12px #888888;
 }
