--- a/src/assets/css/mixin.scss
+++ b/src/assets/css/mixin.scss
@@ -15,3 +15,24 @@
 @mixin shadowHover(){
   box-shadow: 1px 7px 12px #888888;
 }
+
+@mixin textareaDef(){
+  border: none;
+  overflow-x:hidden;
+  overflow-y:hidden;
+  resize: none;
+  font-weight: bold;
+  font-family: Arial;
+}
+
+@mixin showbegin(){
+  opacity: 0;
+  margin-top: 400px !important;
+  transition: all 1s;
+}
+
+@mixin showEnd(){
+  transition: all 1s;
+  //margin-top: -200px;
+  opacity: 1;
+}
