toc项目界面全部基本完成

--- a/src/assets/css/theme.scss
+++ b/src/assets/css/theme.scss
@@ -1,5 +1,5 @@
 //宇航员主题色
-$sue-theme-color: rgb(31,27,72);
+$sue-theme-color: rgb(31, 27, 72);
 //漩涡主题色
 //$sue-theme-color: rgb(131,84,53)
 //慵懒的猫主题色
