--- a/src/assets/css/mixin.scss
+++ b/src/assets/css/mixin.scss
@@ -1,37 +1,39 @@
-@mixin marginTopAndBottom($top:50px,$bottom:50px){
+@mixin marginTopAndBottom($top:50px,$bottom:50px) {
   margin-top: $top;
   margin-bottom: $top;
-};
+}
 
-@mixin shadow(){
+;
+
+@mixin shadow() {
   box-shadow: 1px 1px 12px #888888;
 }
 
-@mixin shadowMenuItem(){
+@mixin shadowMenuItem() {
   box-shadow: 2px 2px 5px #888888;
 }
 
 
-@mixin shadowHover(){
+@mixin shadowHover() {
   box-shadow: 1px 7px 12px #888888;
 }
 
-@mixin textareaDef(){
+@mixin textareaDef() {
   border: none;
-  overflow-x:hidden;
-  overflow-y:hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
   resize: none;
   font-weight: bold;
   font-family: Arial;
 }
 
-@mixin showbegin(){
+@mixin showbegin() {
   opacity: 0;
   margin-top: 400px !important;
   transition: all 1s;
 }
 
-@mixin showEnd(){
+@mixin showEnd() {
   transition: all 1s;
   //margin-top: -200px;
   opacity: 1;
