--- a/src/assets/css/basic.scss
+++ b/src/assets/css/basic.scss
@@ -218,7 +218,7 @@ blockquote{
 
   }
 
-  //line-height: 20px;
+
 }
 
 ul{
@@ -249,5 +249,15 @@ ul{
     margin-bottom: 40px;
 
   }
+
+  img{
+    width: 1226px;
+    height: 500px;
+  }
+
+  p{
+    font-size: 24px;
+  }
+
 
 }
